# memocadre

./: .dir-locals.el  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Justfile  README.md  TODO.md  flake.nix  release-please-config.json  rustfmt.toml  shell.nix
.github/workflows/: release-please.yml  release.yml  validate.yml
debian/: config.yaml  postinst  service  settings.yaml
src/: application.rs  config.rs  configuration.rs  main.rs  render.rs  triangle.rs  worker.rs
src/application/: config_provider.rs  fps.rs  mod.rs  slide.rs
src/application/interfaces/: http.rs  mod.rs  mqtt.rs
src/application/interfaces/mqtt/: mod.rs
src/application/slideshow/: animated_properties.rs  animation.rs  loading.rs  mod.rs  slide.rs  transition.rs
src/configuration/: app_config.rs  mod.rs  settings.rs  sources.rs
src/galery/: immich_client.rs  mod.rs
src/gallery/: mod.rs
src/gallery/immich/: client.rs  mod.rs
src/gl/: buffer_object.rs  framebuffer.rs  mod.rs  shader.rs  texture.rs  vao.rs  wrapper.rs
src/graphics/: blur.rs  buffer_object.rs  epaint.rs  epaint_display.rs  image_display.rs  mod.rs  shader.rs  text_display.rs  texture.rs  vao.rs
src/shader/: frag.glsl  vert.glsl
src/support/: gbm_display.rs  mod.rs  window_display.rs
src/support/gbm_display/: drm_device.rs  gbm_data.rs  mod.rs  page_flip.rs
