[package]
name = "photo-kiosk"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
strip = true

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
bytes = "1.9.0"
drm = "0.14.1"
env_logger = "0.11.6"
epaint = { version = "0.30.0", features = ["log", "mint"] }
gbm = { version = "0.18.0", default-features = false, features = ["drm-support"] }
glissade = { version = "0.2.5", default-features = false }
glow = { version = "0.16.0", features = ["log", "debug_automatic_glGetError", "debug_trace_calls"] }
glutin = { version = "0.32.1", default-features = false, features = ["egl", "x11"] }
glutin-winit = { version = "0.5.0", default-features = false, features = ["egl", "x11"] }
image = { version = "0.25.5", features = ["default-formats"], default-features = false }
log = "0.4.22"
memoffset = "0.9.1"
mint = "0.5.9"
raw-window-handle = "0.6.2"
reqwest = { version = "0.12.12", features = ["blocking", "charset", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thread-priority = "1.2.0"
vek = { version = "0.17.1", features = ["bytemuck", "mint"] }
winit = { version = "0.30.8", default-features = false, features = ["x11"] }
