[package]
name = "photo-kiosk"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"
strip = true

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["derive"] }
config = { version = "0.15.6", default-features = false, features = ["toml", "yaml"] }
drm = "0.14.1"
env_logger = "0.11.6"
epaint = { version = "0.30.0", features = ["log", "mint"] }
gbm = { version = "0.18.0", default-features = false, features = ["drm-support"] }
glissade = { version = "0.2.5", default-features = false }
glow = { version = "0.16.0", features = ["log", "debug_automatic_glGetError", "debug_trace_calls"] }
glutin = { version = "0.32.1", default-features = false, features = ["egl", "x11"] }
glutin-winit = { version = "0.5.0", default-features = false, features = ["egl", "x11"] }
humantime-serde = "1.1.1"
image = { version = "0.25.5", features = ["default-formats"], default-features = false }
itertools = "0.14.0"
log = "0.4.22"
memoffset = "0.9.1"
minreq = { version = "2.13.0", features = ["https-rustls", "punycode", "json-using-serde"] }
mint = "0.5.9"
raw-window-handle = "0.6.2"
replace_with = "0.1.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thread-priority = "1.2.0"
vek = { version = "0.17.1", features = ["bytemuck", "mint"] }
winit = { version = "0.30.8", default-features = false, features = ["x11"] }
